[project]
name = "context-api"
version = "0.1.0"
description = "FastAPI service for Context News RDS access"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.2",
    "context-data-schema @ git+https://github.com/ContextNews/context-data-schemas.git@main",
    "httpx (>=0.28.1,<0.29.0)",
    "pycountry>=24.6",
    "sqladmin>=0.16.0",
    "itsdangerous>=2.1",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.1"
mypy = "^1.19.1"
pre-commit = "^4.5.1"
pytest-cov = "^7.0.0"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"app/db.py" = ["E402"]
"scripts/*" = ["E501"]
"tests/unit/test_stories_routes.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "rds_postgres.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "sqladmin.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

